k8s/manifests-9086c2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-9086c2
  namespace: journee
  labels:
    app: journee-9086c2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-9086c2
  template:
    metadata:
      labels:
        app: journee-9086c2
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-9086c2
          image: gcr.io/my-docker-471807/journee:9086c2-13bf0f
          ports:
            - containerPort: 3000
