k8s/manifests-9086c2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-9086c2
  namespace: journee
spec:
  selector:
    app: journee-9086c2
  ports:
    - port: 80
      targetPort: 3000
